# SlimPlayer

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: AudioBufferManager.cpp  AudioBufferManager.h  AudioBufferManager2.cpp  AudioBufferManager2.h  AudioBufferManagerExo.cpp  AudioBufferManagerExo.h  AudioBufferManagerMedia.cpp  AudioBufferManagerMedia.h  Buffer.cpp  Buffer.h  BufferWrap.cpp  BufferWrap.h  CMakeLists.txt  CurveAnimator.cpp  CurveAnimator.h  DrawParams.cpp  DrawParams.h  DrawWaveformExtension.cpp  DrawWaveformExtension.h  GLES20Renderer.cpp  GLES20Renderer.h  GLES20RendererJNILayer.cpp  GLES20RendererJNILayer.h  Jrect.cpp  Jrect.h  Point.cpp  Point.h  Rect.cpp  Rect.h  Shared.cpp  Shared.h  SynchronizedLinkedList.h  VisualizerView.cpp  VisualizerView.h  demo.cpp  hello-jni.c  hello-jni.cpp
app/src/main/res/drawable/: ic_add_ltgray_36dp.xml  ic_close_ltgray_36dp.xml  ic_fast_forward_ltblue_36dp.xml  ic_fast_rewind_ltblue_36dp.xml  ic_notification_play_ltgray_36dp.xml  ic_notification_previous_ltgray_36dp.xml  ic_pause_ltgray_36dp.xml  ic_pause_ltgray_54dp.xml  ic_play_arrow_ltgray_36dp.xml  ic_play_arrow_ltgray_48dp.xml  ic_play_arrow_ltgray_54dp.xml  ic_repeat_gray_24dp.xml  ic_repeat_gray_48dp.xml  ic_skip_next_ltgray_24dp.xml  ic_skip_next_ltgray_36dp.xml  ic_skip_next_ltgray_54dp.xml  ic_skip_previous_ltgray_24dp.xml  ic_skip_previous_ltgray_36dp.xml  ic_skip_previous_ltgray_54dp.xml
app/src/main/res/layout/: activity_add_to_playlist.xml  activity_demo.xml  activity_fragment_holder.xml  activity_list.xml  activity_main.xml  activity_now_playing.xml  activity_pager.xml  activity_test_player.xml  directory_select_dialog.xml  edit_text_list_item.xml  empty_page.xml  fragment_home.xml  fragment_now_playing.xml  fragment_slim_list.xml  fragment_slim_recycler.xml  home_card.xml  notification_player.xml  notification_player2.xml  notification_player3.xml  notification_player4.xml  notification_player_big.xml  recycler_item.xml  (+3 more)
gradle/wrapper/: gradle-wrapper.properties
jni/: BKP_Android.mk.bkp
(+150 files in other folders)
